--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^7.14.2",
     "nodemon": "^2.0.2"
   }
 }
